Update to 1.21.4 and Java 23